--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.9",
+    "@react-pdf/renderer": "^3.1.9",
     "@supabase/supabase-js": "^2.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
