--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.9",
     "@react-pdf/renderer": "^3.1.9",
-    "@supabase/supabase-js": "^2.22.0",
+    "@supabase/supabase-js": "^2.23.0",
+    "@tanstack/react-query": "^4.29.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
