--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@phosphor-icons/react": "^2.0.9",
     "@react-pdf/renderer": "^3.1.9",
     "@supabase/supabase-js": "^2.23.0",
     "@tanstack/react-query": "^4.29.7",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
